--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,8 @@ h3 {
     font-size: 2em;
   }
 }
-/* nav styles */
+/* --------- nav styles --------*/
+
 .nav-bar {
   display: flex;
   flex-direction: row;
@@ -65,12 +66,12 @@ nav .link:hover {
     flex-direction: column;
     align-content: center;
   }
-  nav li {
+  /* nav li {
     margin-right: 500px;
-  }
+  } */
 }
 
-/* --------main content--------- */
+/* --------main page content--------- */
 
 .content {
   max-width: 1200px;
@@ -122,6 +123,56 @@ nav .link:hover {
   -webkit-background-clip: text;
 }
 
+/* -------lyric fetcher content------ */
+.hero-2 {
+  margin: 0;
+  height: 100vh;
+  clip-path: polygon(0px 70%, 100% 90%, 100% 0px, 0px 0px);
+  background-image: linear-gradient(to top, #40af9375 0%, #4175d665 100%),
+    url("../assets/photos/matt-holmes-1329881-unsplash.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero-background-2 .link {
+  text-decoration: none;
+  color: black;
+  font-family: "Montserrat";
+  font-size: 1.4em;
+}
+
+.hero-background-2 .link:hover {
+  -webkit-text-decoration: underline;
+  text-decoration: underline;
+  background-image: linear-gradient(130deg, #43da7a 0%, #389dcf 100%);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+#results p {
+  font-size: 1em;
+  font-family: "Montserrat";
+}
+
+#submit {
+  background-color: transparent;
+  color: rgb(0, 0, 0);
+  padding: 16px;
+  font-size: 1.2em;
+  font-family: "Montserrat";
+  border-color: transparent;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+label {
+  font-size: 1.2em;
+  font-family: "Montserrat";
+}
+
 /* -------quotes styles------- */
 
 .quotebuttons {
@@ -152,4 +203,62 @@ footer a {
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+/*  -------- Dropdown Styles ------ */
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: transparent;
+  color: black;
+  font-family: "Montserrat";
+  font-size: 1.4em;
+  border-color: transparent;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover,
+.dropbtn:focus {
+  -webkit-text-decoration: underline;
+  text-decoration: underline;
+  background-image: linear-gradient(130deg, #43da7a 0%, #389dcf 100%);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(248, 248, 248, 0.5);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: rgb(255, 255, 255, 0.8);
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
 }
