--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,24 +10,24 @@ h1 {
   font-family: "Cormorant";
   font-size: 4em;
   font-weight: 100;
-  color: rgb(33, 33, 33);
+  color: #252525;
 }
 
 h2 {
   font-family: "Cormorant";
   font-size: 2em;
   font-weight: 100;
-  color: rgb(33, 33, 33);
+  color: #252525;
 }
 
 h3 {
   font-family: "Cormorant";
   font-weight: 100;
-  color: rgb(33, 33, 33);
+  color: #252525;
 }
 
 p {
-  color: rgb(33, 33, 33);
+  color: #252525;
   font-family: "Montserrat";
   font-size: 1em;
 }
@@ -60,7 +60,7 @@ nav li {
 
 nav .link {
   text-decoration: none;
-  color: rgb(33, 33, 33);
+  color: #252525;
   font-family: "Montserrat";
   font-size: 1.4em;
   margin-left: 6px;
@@ -91,7 +91,7 @@ nav .link:hover {
 /* Dropdown Button */
 .dropbtn {
   background-color: transparent;
-  color: black;
+  color: #252525;
   font-family: "Montserrat";
   font-size: 1.4em;
   border-color: transparent;
@@ -120,7 +120,7 @@ nav .link:hover {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: rgba(248, 248, 248, 0.5);
+  background-color: rgba(248, 248, 248, 0.65);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -128,7 +128,7 @@ nav .link:hover {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: #252525;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -208,7 +208,7 @@ nav .link:hover {
 
 .hero-background-2 .link {
   text-decoration: none;
-  color: black;
+  color: #252525;
   font-family: "Montserrat";
   font-size: 1.4em;
 }
@@ -244,7 +244,7 @@ nav .link:hover {
 
 #submit {
   background-color: transparent;
-  color: rgb(0, 0, 0);
+  color: #252525;
   padding: 16px;
   font-size: 1.2em;
   font-family: "Montserrat";
@@ -285,7 +285,7 @@ label {
 }
 
 footer a {
-  color: black;
+  color: #252525;
 }
 
 .footer-links {
