--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 /* ------Universal Styles------ */
+
 body {
   margin: 25px;
 }
@@ -108,6 +109,7 @@ nav .link:hover {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
+  outline: 0;
 }
 
 /* The container <div> - needed to position the dropdown content */
