--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,6 +162,15 @@ nav .link:hover {
   margin-bottom: 0px;
 }
 
+.content a {
+  width: 100px;
+  margin: auto;
+}
+
+.content input {
+  outline: 0;
+}
+
 .quote-selector {
   border: none;
   background: transparent;
