--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 /* ------Universal Styles------ */
 
 body {
-  margin: 25px;
+  margin: 0px;
 }
 
 ul {
@@ -27,6 +27,7 @@ h3 {
   font-family: "Lora";
   font-weight: 100;
   color: #252525;
+  margin-top: 0px;
 }
 
 p {
@@ -56,10 +57,13 @@ li {
 }
 
 /* --------- nav styles --------*/
-
+.nav-background {
+  background: #f0ecfd;
+}
 .nav-bar {
   width: 900px;
-  margin: 25px auto;
+  padding: 25px;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -191,10 +195,10 @@ nav .link:hover {
 
 .hero {
   margin: 0 auto;
-  max-width: 75%;
+  width: 100%;
   height: 65vh;
   clip-path: polygon(0px 100%, 100% 70%, 100% 0px, 0px 0px);
-  background: #e9e5f5;
+  background: #f0ecfd;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -225,10 +229,10 @@ nav .link:hover {
 /* -------lyric fetcher content------ */
 .hero-2 {
   margin: 0 auto;
-  max-width: 75%;
-  height: 65vh;
+  width: 100%;
+  height: 75vh;
   clip-path: polygon(0px 70%, 100% 90%, 100% 0px, 0px 0px);
-  background: #d4d3da;
+  background: #f0ecfd;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -287,7 +291,7 @@ nav .link:hover {
   border-radius: 10px;
   cursor: pointer;
   box-shadow: 1px 10px 16px 1px rgba(0, 0, 0, 0.2);
-  transition-duration: 0.2s;
+  transition-duration: 0.025s;
 }
 
 #submit:hover {
@@ -351,4 +355,24 @@ footer a {
   display: flex;
   flex-flow: column wrap;
   width: 375px;
+  padding: 25px;
+  border: solid 1px #707070;
+  border-radius: 25px;
+  box-shadow: 1px 10px 16px 1px rgba(0, 0, 0, 0.2);
+}
+
+.pricing {
+  display: flex;
+  justify-content: center;
+}
+
+.pricing-hero {
+  margin: 0 auto;
+  width: 100%;
+  height: 45vh;
+  clip-path: polygon(0px 85%, 100% 100%, 100% 0px, 0px 0px);
+  background: #f0ecfd;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
