--- a/styles/styles.css
+++ b/styles/styles.css
@@ -376,3 +376,56 @@ footer a {
   background-size: cover;
   background-position: center;
 }
+
+/* Print Styles */
+
+@media print {
+  /* Set colors explicity */
+  body {
+    background: #ffffff;
+    color: #252525;
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+  }
+
+  /* hide elements we don't want in print */
+  nav,
+  footer {
+    display: none;
+  }
+
+  /* Set page margins and widths */
+  @page {
+    /* use print dimensions not screen dimensions */
+    margin: 2cm 1.75cm;
+  }
+
+  /* avoid odd page breaks */
+  h1,
+  h2,
+  h3 {
+    page-break-after: avoid; /* Prevent headings from being printed at the bottom of the page */
+  }
+
+  article {
+    page-break-before: always; /*Always start new articles on a new page */
+  }
+
+  img {
+    page-break-inside: avoid; /*Always prevent pagebreaks in the middle of an image */
+  }
+
+  /* adding the href URL of outgoing links to the end of the link tags */
+  a[href^="http"]:after {
+    content: " < " attr(href) " > ";
+    font-style: italic;
+  }
+}
+
+@media print and (color) {
+  * {
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+  }
+}
